# fused-syntax

./: LICENSE  README.md  cabal.project  fused-syntax.cabal
src/Control/Monad/: Module.hs
src/Data/Syntax/: Algebra.hs  Functor.hs  Scope.hs  Stack.hs  Sum.hs  Term.hs  Var.hs
src/Data/Syntax/Trans/: Scope.hs
src/Example/: Lam.hs
src/Syntax/: Algebra.hs  Fin.hs  Fix.hs  Foldable.hs  Functor.hs  Interpret.hs  Module.hs  Nat.hs  Pretty.hs  Scope.hs  Stack.hs  Sum.hs  Term.hs  Traversable.hs  Var.hs  Vec.hs
src/Syntax/Trans/: Scope.hs
