cabal-version:       2.2

name:                fused-syntax
version:             0.0.0.0
synopsis:            Fast, flexible, fused syntax operations for Haskell
description:         Fast, flexible, fused syntax operations for languages implemented in Haskell
homepage:            https://github.com/antitypical/fused-syntax
bug-reports:         https://github.com/antitypical/fused-syntax/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2019 Rob Rix
category:            Language
extra-source-files:
  CHANGELOG.md
  README.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-star-is-type
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Syntax.Algebra
    Syntax.Functor
    Syntax.Module
    Syntax.Pretty
    Syntax.Scope
    Syntax.Stack
    Syntax.Sum
    Syntax.Term
    Syntax.Trans.Scope
    Syntax.Var
  other-modules:
    Example.Lam
  build-depends:
      base          ^>=4.12.0.0
    , fused-effects ^>= 0.5
    , transformers  ^>= 0.5.6
